--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,5 @@
-- python=3.10
-- google-generativeai=0.8.4
+python==3.10
+google-generativeai==0.8.4
+gTTS==2.5.4
+ipython==8.30.0
+python-dotenv==1.0.1
