--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,7 @@
-python==3.10
+python==3.10.16
 google-generativeai==0.8.4
 gTTS==2.5.4
 ipython==8.30.0
 python-dotenv==1.0.1
+ffmpeg==7.1.0
+pygame==2.6.1
